--- a/School.UI/Views/Home/Index.cshtml
+++ b/School.UI/Views/Home/Index.cshtml
@@ -557,6 +557,17 @@
         }
 
 
+
+    table .btn {
+        margin: 0px 1px;
+        height: 26px;
+        padding: 2px 2px;
+    }
+
+    table tbody tr {
+        height: 30px;
+    }
+
 </style>
 
 
@@ -585,7 +596,7 @@
 
         <div id="basePartialHolder" class="row rm-pd" style="display:none;border: 1px solid silver;">
             <div class="divParent rd col-xs-12 rm-pd rd">
-                <div class="divHeader col-xs-12 rm-pd">
+                <div class="divHeader col-xs-12 rm-pd" style="background-color:rgb(173, 128, 73);">
                     <p class="col-xs-12 headerText login-box-msg text-center rm-pd">Header Heading</p>
                 </div>
 
@@ -617,7 +628,7 @@
                     X
                 </button>
 
-                <div class="divHeader col-xs-12">
+                <div class="divHeader col-xs-12" style="background-color:rgb(173, 128, 73);">
                     <p class="col-xs-12 headerText login-box-msg text-center"></p>
                 </div>
 
