--- a/School.UI/Views/Student/_ViewStudent.cshtml
+++ b/School.UI/Views/Student/_ViewStudent.cshtml
@@ -20,6 +20,15 @@
         .card-s:hover {
             box-shadow: 0 2px 4px rgba(0,0,0,0.25), 0 2px 2px rgba(0,0,0,0.22);
         }
+
+    table .btn{
+        margin :0px 1px;
+        height:26px;
+        padding:2px 2px;
+    }
+    table tbody tr {
+        height: 30px;
+    }
 </style>
 
 <div id="student-page" class="col-md-12" style="border: 0px solid white; display: inline-block;">
@@ -44,7 +53,7 @@
                             <input id="txtName" type="text" value="Sphiwe" class="col-md-12 form-control" />
                         </div>
                         <div class="col-md-2">
-                            <input id="btnSearch" type="button" value="Search" class="btn btn-default" />
+                            <input id="btnSearch" type="button" value="Search" class="btn btn-default" style="background-color:transparent;border:thin solid rgb(173, 128, 73);"/>
                         </div>
                     </div>
                 </div>
@@ -62,7 +71,7 @@
             <div class="col-xs-12" style="padding:15px;">
 
                 <table id="tableId" class="table" style="background-color:white; border:1px solid silver;">
-                    <thead style="background-color:rgb(240, 240, 240);">
+                    <thead style="background-color:rgb(173, 128, 73);">
                         <tr>
                             <th>
                                 @Html.DisplayNameFor(model => model.StudentId)
@@ -103,7 +112,7 @@
                             <td style="display:none;">
                                 <button id="btnEdit" type="button" class="btnEdit btn btn-primary" style="width:100px;display:none;">Edit</button>
                             </td>
-                            <td>
+                            <td style="padding:4px 0px;">
                                 <button id="btnView" type="button" class="btnView btn btn-primary" style="width:60px;">View</button>
                                 <button id="btnEdit" type="button" class="btnEdit btn btn-warning" style="width:60px;">Edit</button>
                                 <button id="btnDelete" type="button" class="btnDelete btn btn-danger" style="width:60px;">Delete</button>
