--- a/School.UI/Views/GradeClass/_TableGradeClass.cshtml
+++ b/School.UI/Views/GradeClass/_TableGradeClass.cshtml
@@ -2,6 +2,7 @@
 
 @{
     string test = "test";
+    //grade class
 }
 <div class="myContainer col-lg-offset-10 col-xs-2 rm-pd ">
     <input class="tablink active" id="btnAddNewRecord" type="button" value="Add New Record" style="width:130px;margin-top:5px;margin-bottom:5px;border-right:1px solid orange;" />
