--- a/School.UI/Views/Home/Index.cshtml
+++ b/School.UI/Views/Home/Index.cshtml
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     @*<link href="~/Content/bootstrap-3.3.6-dist/css/bootstrap.min.css" rel="stylesheet" />*@
     <link href="~/Content/commonCSS.css" rel="stylesheet" />
+    <link href="~/Content/css_mine/common.css" rel="stylesheet" />
 </head>
 
 <style>
@@ -557,16 +558,11 @@
         }
 
 
-
-    table .btn {
-        margin: 0px 1px;
-        height: 26px;
-        padding: 2px 2px;
+    #basePartialHolder .divHeader {
+        background-color: rgb(173, 128, 73);
     }
-
-    table tbody tr {
-        height: 30px;
-    }
+ 
+ 
 
 </style>
 
@@ -596,7 +592,7 @@
 
         <div id="basePartialHolder" class="row rm-pd" style="display:none;border: 1px solid silver;">
             <div class="divParent rd col-xs-12 rm-pd rd">
-                <div class="divHeader col-xs-12 rm-pd" style="background-color:rgb(173, 128, 73);">
+                <div class="divHeader col-xs-12 rm-pd" style="">
                     <p class="col-xs-12 headerText login-box-msg text-center rm-pd">Header Heading</p>
                 </div>
 
