--- a/School.UI/Views/Classes/_TableClass.cshtml
+++ b/School.UI/Views/Classes/_TableClass.cshtml
@@ -20,6 +20,25 @@
         .card-s:hover {
             box-shadow: 0 2px 4px rgba(0,0,0,0.25), 0 2px 2px rgba(0,0,0,0.22);
         }
+
+    td,
+    th {
+        padding: 0.25rem;
+        text-align: left;
+        border: 1px solid #ccc;
+    }
+    table .btn {
+        margin: 0px 1px;
+        height: 26px;
+        padding: 2px 2px;
+        letter-spacing: 1px;
+        font-family: sans-serif;
+        font-size: 1.1rem;
+        width: 80px;
+        background-color: transparent;
+        border: thin solid silver;
+    }
+
 </style>
 
 <div class="col-md-12" style="border: 0px solid white; display: inline-block;">
@@ -35,7 +54,7 @@
                         <th>
                             @Html.DisplayNameFor(model => model.ClassName)
                         </th>
-                        <th>
+                        <th style="width:100px;">
                             Edit
                         </th>
                     </tr>
@@ -51,7 +70,7 @@
                                 @Html.DisplayFor(modelItem => item.ClassName)
                             </td>
                             <td>
-                                <button id="btnRowEdit" type="button" class="btnRowEdit btn btn-primary">Edit</button>
+                                <button id="btnRowEdit" type="button" class="btnRowEdit btn">Edit</button>
                             </td>
                         </tr>
                     }
