--- a/School.UI/Views/Grade/_TableGrade.cshtml
+++ b/School.UI/Views/Grade/_TableGrade.cshtml
@@ -1,5 +1,10 @@
 ﻿@model IEnumerable<School.Entities.Fields.Grades>
 
+@{
+    string test = "test";
+    //grade
+}
+
 <style>
 
     .card_t {
@@ -20,6 +25,66 @@
         .card-s:hover {
             box-shadow: 0 2px 4px rgba(0,0,0,0.25), 0 2px 2px rgba(0,0,0,0.22);
         }
+
+
+
+
+
+    table {
+        border-collapse: collapse;
+        border: 2px solid rgb(200, 200, 200);
+        letter-spacing: 1px;
+        font-family: sans-serif;
+        font-size: 1.1rem;
+    }
+
+        table tbody tr {
+            height: 30px;
+        }
+
+    td,
+    th {
+        padding: 0.25rem;
+        text-align: left;
+        border: 1px solid #ccc;
+    }
+
+    td {
+        text-align: center;
+    }
+
+    tbody tr:nth-child(odd) {
+        background: #eee;
+    }
+
+
+    tbody tr:hover {
+        background: rgb(205, 205, 205);
+        /*height: 30px;*/
+    }
+
+    table .btn {
+        margin: 0px 1px;
+        height: 26px;
+        padding: 2px 2px;
+        letter-spacing: 1px;
+        font-family: sans-serif;
+        font-size: 1.1rem;
+        width:80px;
+        background-color:transparent;
+        border:thin solid silver;
+    }
+
+
+    .PartialLayoutMenu, #menuId, #menuId .sidebar, .treeview a, 
+    #layoutLeftId, #layoutLeftId .layoutLeft-header, .layoutRight-header-bottom, 
+    #Home-Container #basePartialHolder .divHeader {
+        background-color: rgb(43, 67, 81);
+    }
+         #Home-Container #basePartialHolder .divHeader p {
+            color:white;
+        }
+
 </style>
 
 <div class="col-md-12" style="border: 0px solid white; display: inline-block;">
@@ -34,7 +99,7 @@
                         <th>
                             @Html.DisplayNameFor(model => model.Grade)
                         </th>
-                        <th>
+                        <th style="width:100px;">
                             Edit
                         </th>
                     </tr>
@@ -50,7 +115,7 @@
                                 @Html.DisplayFor(modelItem => item.Grade)
                             </td>
                             <td>
-                                <button id="btnEditGrade" type="button" class="btnEditGrade btn btn-primary">Edit</button>
+                                <button id="btnEditGrade" type="button" class="btnEditGrade btn">Edit</button>
                             </td>
                         </tr>
                     }
