--- a/School.UI/Views/Shared/_Layout.cshtml
+++ b/School.UI/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
             border: 2px solid rgb(59, 90, 108);
             border-top: 0px;
             display: block;
-            background-color:rgb(214, 219, 233);
+            /*background-color:rgb(214, 219, 233);*/
         }
 
         .layout-wrapper {
